--- a/nginx/index.html
+++ b/nginx/index.html
@@ -5,6 +5,6 @@
   <li><a href="//localhost:8180">haproxy:8180 -> varnish:80 (http) -> nginx:80</a></li>
   <li><a href="//localhost:8181">haproxy:8181 -> varnish:8443 (proxy protocol) -> nginx:80 - This is what we want with Traefik</a></li>
   <li><a href="//localhost:680">traefik:680 -> varnish:80 (http) -> nginx:80</a></li>
-  <li><a href="//localhost:681">traefik:681 -> varnish:8443 (proxy protocol) -> nginx:80</a></li>
+  <li><a href="//localhost:681">traefik:681 -> varnish:8443 (proxy protocol) -> nginx:80 - This is what we want to use</a></li>
   <li><a href="//localhost:682">traefik:682 -> varnish of your choice:8443 (proxy protocol)</a></li>
 </ul>
